// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobsToolbar /> should render with dropdown menu 1`] = `
<Toolbar>
  <FormGroup
    bsClass="form-group"
  >
    <InputGroup
      bsClass="input-group"
    >
      <InputGroupAddon
        bsClass="input-group-addon"
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="search"
          pullRight={false}
        />
      </InputGroupAddon>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[MockFunction]}
        placeholder="User or task"
        value="foo"
      />
    </InputGroup>
  </FormGroup>
  <Button
    bsStyle="default"
    onClick={[Function]}
    pullRight={false}
    tip="Clear Finished"
    tipPlacement="top"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="trash"
      pullRight={false}
    />
  </Button>
</Toolbar>
`;

exports[`<JobsToolbar /> should render without dropdown menu 1`] = `
<Toolbar>
  <FormGroup
    bsClass="form-group"
  >
    <InputGroup
      bsClass="input-group"
    >
      <InputGroupAddon
        bsClass="input-group-addon"
      >
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="search"
          pullRight={false}
        />
      </InputGroupAddon>
      <FormControl
        bsClass="form-control"
        componentClass="input"
        onChange={[MockFunction]}
        placeholder="User or task"
        value="foo"
      />
    </InputGroup>
  </FormGroup>
</Toolbar>
`;
